--- a/templates/articles.html
+++ b/templates/articles.html
@@ -1,7 +1,8 @@
 {% extends 'layout.html' %}
+
 {% block body %}
 <h1>Articles</h1>
-<ul class="list-group"> 􀀀{% for article in articles %}
+<ul class="list-group"> {% for article in articles %}
 <li class="list-group-item">
 <a href="articles/{{article.id}}">{{article.title}}</a>
 </li>
