--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -5,20 +5,27 @@
 <a class="btn btn-success" href="/add_article">Add Articles</a>
 <hr>
 <table class="table table-striped">
-        <tr> <th>ID</th>
-        <th>Title</th>
-        <th>Author</th>
-        <th>Date</th>
-        <th></th>
-        <th></th>
+        <tr>
+                <th>ID</th>
+                <th>Title</th>
+                <th>Author</th>
+                <th>Date</th>
+                <th></th>
+                <th></th>
         </tr>
         {% for article in articles %}
         <tr>
-        <td>{{article.id}}</td>
-        <td>{{article.title}}</td>
-        <td>{{article.author}}</td>
-        <td>{{article.create_date}}</td>
-        <td><a href="edit_article/{{article.id}}" class="btn btn-default pullright">Edit</td>
-        <td><a href="#" class="btn btn-danger">Delete</a></td>
-        {% endfor %} </table>
+                <td>{{article.id}}</td>
+                <td><a href="articles/{{article.id}}">{{article.title}}</a></td>
+                <td>{{article.author}}</td>
+                <td>{{article.create_date}}</td>
+                <td><a href="edit_article/{{article.id}}" class="btn btn-default pullright">Edit</td>
+                <td>
+                <form action="{{url_for('delete_article',id=article.id)}}" method="post">
+                        <input type="hidden" name="_method" value="DELETE">
+                        <input type="submit" value="Delete" class="btn btn-danger">
+                </form>
+                </td>
+        {% endfor %}
+</table>
 {% endblock %}
