--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -18,6 +18,7 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
           {% if session.logged_in %}
+          <li><a href = "/dashboard">Dashboard</a></li>
             <li><a href="/login">Logout</a></li>
           {% else %}
             <li><a href="/register">Register</a></li>
